--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this blog", @blog %> |
   <%= link_to "Back to blogs", blogs_path %>
+  <%= button_to "Destroy this blog", @blog, method: :delete, class: 'delete-button' %>
 </div>
