--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,14 +1,16 @@
-<p style="color: green"><%= notice %></p>
+<div class="header">
+  <p style="color: green"><%= notice %></p>
 
-<h1>Blogs</h1>
+  <h1>Blogs</h1>
 
-<div id="blogs">
-  <% @blogs.each do |blog| %>
-    <%= render blog %>
-    <p>
-      <%= link_to "Show this blog", blog %>
-    </p>
-  <% end %>
+  <%= link_to "New blog", new_blog_path, class: 'new-link' %>
 </div>
 
-<%= link_to "New blog", new_blog_path %>
+<div id="blogs">
+  <% @blogs.each_with_index do |blog, i| %>
+    <% unless i.zero? %>
+      <hr>
+    <% end %>
+    <%= render blog %>
+  <% end %>
+</div>
