--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,5 +1,5 @@
 <%= bootstrap_form_for(blog) do |f| %>
   <%= f.text_field :title %>
-  <%= f.text_area :content %>
+  <%= f.rich_text_area :content %>
   <%= f.submit %>
 <% end %>
