--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,3 +1,9 @@
+<% if blog.new_record? %>
+  <h1>New blog</h1>
+<% else %>
+  <h1>Editing blog</h1>
+<% end %>
+
 <%= bootstrap_form_for(blog) do |f| %>
   <%= f.text_field :title %>
   <%= f.rich_text_area :content %>
