--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,10 +1,3 @@
-<h1>Editing blog</h1>
-
-<%= render "form", blog: @blog %>
-
-<br>
-
-<div>
-  <%= link_to "Back to blogs", blogs_path %>
-  <%= button_to "Destroy this blog", @blog, method: :delete, class: 'delete-button' %>
-</div>
+<%= turbo_frame_tag "blog_form" do %>
+  <%= render "form", blog: @blog %>
+<% end %>
