--- a/app/views/blogs/result.turbo_stream.erb
+++ b/app/views/blogs/result.turbo_stream.erb
@@ -1,1 +1,9 @@
 <%= turbo_stream.replace "blogs", partial: 'blogs/blogs', locals: { blogs: @blogs } %>
+<%= turbo_stream.update "notice" do %>
+  <% if @notice %>
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+      <%= @notice %>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  <% end %>
+<% end %>
