--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -9,7 +9,7 @@
 <div data-controller="modal"
      data-action="turbo:frame-load->modal#show turbo:submit-end->modal#hide">
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-modal-target="modal">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-body">
           <%= turbo_frame_tag "blog_form", autoscroll: true, data: { autoscroll_behavior: 'start' } do %>
