--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -5,10 +5,7 @@
 </div>
 
 <div id="blogs">
-  <% @blogs.each_with_index do |blog, i| %>
-    <% unless i.zero? %>
-      <hr>
-    <% end %>
+  <% @blogs.each do |blog| %>
     <%= render blog %>
   <% end %>
 </div>
