Refactoring flash https://zenn.dev/shita1112/books/cat-hotwire-turbo/viewer/tutorial-2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
 
   <body>
     <div class="p-3 container">
-      <div id="notice"></div>
+      <div id="flash">
+        <%= render "flash" %>
+      </div>
       <%= yield %>
     </div>
   </body>
