Show flash as modal / Fix destroy bug

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,8 @@
 
   <body>
     <div class="p-3 container">
-      <div id="flash">
-        <%= render "flash" %>
-      </div>
       <%= yield %>
     </div>
+    <div id="flashes" class="position-fixed top-0 end-0" style="margin: 0.75rem"></div>
   </body>
 </html>
