--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,21 +1,7 @@
 <div class="header">
   <h1>Blogs</h1>
 
-  <%= link_to "New blog", new_blog_path, class: 'new-link', data: { turbo_frame: 'blog_form' } %>
+  <%= link_to "New blog", new_blog_path, class: 'new-link', data: { turbo_frame: 'modal_body' } %>
 </div>
 
 <%= render 'blogs', blogs: @blogs %>
-
-<div data-controller="modal"
-     data-action="turbo:frame-load->modal#show turbo:submit-end->modal#hide">
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-modal-target="modal">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-body">
-          <%= turbo_frame_tag "blog_form", autoscroll: true, data: { autoscroll_behavior: 'start' } do %>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
