--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,3 +1,3 @@
-<%= turbo_frame_tag "blog_form" do %>
-  <%= render "form", blog: @blog %>
+<%= turbo_frame_tag "modal_body" do %>
+  <%= render "form", blog: @blog, title: 'Editing blog' %>
 <% end %>
