Refine modal https://zenn.dev/shita1112/books/cat-hotwire-turbo/viewer/tutorial-3

--- a/app/views/application/_modal.html.erb
+++ b/app/views/application/_modal.html.erb
@@ -1,13 +1,15 @@
-<div data-controller="modal"
-     data-action="turbo:frame-load->modal#show turbo:submit-end->modal#hide">
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-modal-target="modal">
+<%= turbo_frame_tag "modal" do %>
+  <div class="modal fade" data-controller="modal">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
-        <div class="modal-body">
-          <%= turbo_frame_tag "modal_body", autoscroll: true, data: { autoscroll_behavior: 'start' } do %>
-          <% end %>
+        <div class="modal-header">
+          <h5 class="modal-title"><%= title%></h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body" data-action="turbo:submit-end->modal#close">
+          <%= yield %>
         </div>
       </div>
     </div>
   </div>
-</div>
+<% end %>
