--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,13 +1,13 @@
-<h1><%= title %></h1>
+<%= turbo_frame_tag blog do %>
+  <%= bootstrap_form_with(model: blog) do |f| %>
+    <%= f.text_field :title %>
+    <%= f.rich_text_area :content %>
+    <%= f.submit %>
+  <% end %>
 
-<%= bootstrap_form_for(blog) do |f| %>
-  <%= f.text_field :title %>
-  <%= f.rich_text_area :content %>
-  <%= f.submit %>
-<% end %>
-
-<% if blog.persisted? %>
-  <%= button_to blog, method: :delete, class: 'delete-button' do %>
-    <i class="bi bi-trash"></i>
+  <% if blog.persisted? %>
+    <%= button_to blog, method: :delete, class: 'delete-button' do %>
+      <i class="bi bi-trash"></i>
+    <% end %>
   <% end %>
 <% end %>
