--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,3 +1,3 @@
-<%= turbo_frame_tag "modal_body" do %>
-  <%= render "form", blog: @blog, title: 'New blog' %>
+<%= render "modal", title: "New blog" do %>
+  <%= render "form", blog: @blog %>
 <% end %>
