--- a/app/views/application/_flash.html.erb
+++ b/app/views/application/_flash.html.erb
@@ -1,5 +1,5 @@
 <% if notice %>
-  <div class="mb-2 toast hide border-primary" data-controller="toast">
+  <div class="mb-2 toast hide border-primary" data-controller="toast" data-turbo-temporary>
     <div class="toast-header text-primary">
       <strong class="me-auto"><%= icon_with_text("check-circle", "成功") %></strong>
       <button class="btn-close" data-bs-dismiss="toast"></button>
