--- a/app/assets/stylesheets/actiontext.css
+++ b/app/assets/stylesheets/actiontext.css
@@ -29,3 +29,7 @@
   padding: 0 !important;
   max-width: 100% !important;
 }
+
+trix-toolbar .trix-button-group.trix-button-group--file-tools {
+  display: none;
+}
